ci: rename check-status jobs to unique names per workflow
GitHub required status checks match by job name only, not by workflow
name. When both workflows had a job named "check-status", whichever
completed first (often the one with all jobs skipped) would satisfy
the required check, allowing auto-merge before the other workflow
finished.

Rename to "validate-status" and "sync-status" so each workflow has a
distinct required check. Also add sync-status job to the sync workflow
which previously had no status gate.

Note: the ruleset in fohte/infra must be updated to require both
"validate-status" and "sync-status" instead of "check-status".

--- a/.github/workflows/validate-template.yml
+++ b/.github/workflows/validate-template.yml
@@ -209,7 +209,7 @@ jobs:
         run: cargo test
 
   # this job is used for branch protection rule
-  check-status:
+  validate-status:
     runs-on: ubuntu-latest
     needs:
       - list-fixtures
