--- a/tests/fixtures/monorepo-node-workspace.yml
+++ b/tests/fixtures/monorepo-node-workspace.yml
@@ -1,9 +1,9 @@
 type: base
-project_name: monorepo-node-workspace
-description: Test monorepo project with Node.js workspace
+project_name: monorepo-node-workspace-pnpm
+description: Test monorepo project with Node.js workspace (pnpm)
 is_public: false
 use_release_please: false
-node_package_manager: bun
+node_package_manager: pnpm
 monorepo_node_workspace: true
 subpackages:
   - name: frontend
