--- a/copier.yml
+++ b/copier.yml
@@ -47,10 +47,12 @@ _exclude:
   - '{% if not use_release_please %}.github/workflows/test-release-please.yml{% endif %}'
   # Exclude Node.js specific files when type is not 'node'
   # Use leading / to match root only (not yield subpackage directories)
-  - "{% if type != 'node' %}/package.json{% endif %}"
+  - "{% if type != 'node' and not (monorepo_node_workspace | default(false)) %}/package.json{% endif %}"
   - "{% if type != 'node' %}/tsconfig.json{% endif %}"
-  - "{% if type != 'node' %}/eslint.config.js{% endif %}"
+  - "{% if type != 'node' and not (monorepo_node_workspace | default(false)) %}/eslint.config.js{% endif %}"
   - "{% if type != 'node' %}/vitest.config.ts{% endif %}"
+  # pnpm-workspace.yaml only when workspace is enabled (workspace requires pnpm)
+  - '{% if not (monorepo_node_workspace | default(false)) %}/pnpm-workspace.yaml{% endif %}'
   # Exclude CLAUDE.md when no Rust code (only contains Rust test rules)
   - "{% if type != 'rust' and not (subpackages | selectattr('type', 'equalto', 'rust') | list) %}/CLAUDE.md{% endif %}"
   # Exclude Rust specific files when type is not 'rust'
@@ -66,7 +68,7 @@ _exclude:
   # Exclude coverage files when coverage is disabled
   - '{% if not use_coverage %}/codecov.yml{% endif %}'
   # Exclude type-specific files
-  - "{% if type not in ['node', 'rust'] %}/.gitignore{% endif %}"
+  - "{% if type not in ['node', 'rust'] and not (monorepo_node_workspace | default(false)) %}/.gitignore{% endif %}"
   - "{% if type not in ['node', 'rust'] %}/src{% endif %}"
 
 # Template parameters
@@ -132,6 +134,17 @@ node_package_manager:
   default: bun
   help: Node.js package manager to use
   when: "{{ type == 'node' or (subpackages | selectattr('type', 'equalto', 'node') | list | length > 0) }}"
+
+# Placed after node_package_manager so the default/validator can reference it in interactive mode
+monorepo_node_workspace:
+  type: bool
+  help: Enable pnpm workspace for monorepo (hoists shared devDependencies to root)
+  when: "{{ type == 'base' and (subpackages | selectattr('type', 'equalto', 'node') | list | length > 0) }}"
+  default: "{{ node_package_manager == 'pnpm' and (subpackages | selectattr('type', 'equalto', 'node') | list | length) >= 2 }}"
+  validator: >-
+    {% if monorepo_node_workspace and node_package_manager != 'pnpm' %}
+    monorepo_node_workspace requires pnpm as the package manager. bun workspace is not supported.
+    {% endif %}
 
 use_coverage:
   type: bool
