feat(template): replace Swatinem/rust-cache with sccache-action
rust-cache caches the entire target/ directory, so any Cargo.lock
change (even a single crate update) invalidates the whole cache and
triggers a full recompile. sccache wraps rustc and caches at the
object-file level, so unchanged crates keep their cache even when
dependencies change.

Replace Swatinem/rust-cache@v2 with mozilla-actions/sccache-action@v0.0.9
in all Rust CI jobs: test.yml.jinja (test, unit-test, monorepo unit-test),
release-please.yml.jinja (build-release), and validate-template.yml
(validate-rust). Each Rust job now sets SCCACHE_GHA_ENABLED and
RUSTC_WRAPPER env vars and runs sccache-action before mise-action.

--- a/.github/workflows/validate-template.yml
+++ b/.github/workflows/validate-template.yml
@@ -218,20 +218,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: regenerate-and-commit
     if: needs.regenerate-and-commit.outputs.rust_changed == 'true'
+    env:
+      SCCACHE_GHA_ENABLED: 'true'
+      RUSTC_WRAPPER: 'sccache'
 
     steps:
       - uses: actions/checkout@v6
         with:
           ref: ${{ github.ref_name }}
 
+      # Run sccache-action before mise-action so that sccache binary is
+      # available when mise installs cargo tools (RUSTC_WRAPPER=sccache).
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.9
+
       - uses: jdx/mise-action@v3
         with:
           working_directory: generated/rust
-
-      - name: Cache cargo dependencies
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: generated/rust
 
       - name: Run tests
         working-directory: generated/rust
