template: add root .gitignore for monorepo with Rust subpackages
CARGO_TARGET_DIR={{config_root}}/target outputs build artifacts to the
project root's target/ directory. For monorepo (type=base) with Rust
subpackages, the root .gitignore was not generated because copier.yml
excluded it for non-node/non-rust types, causing CI to fail when
target/ files appeared as untracked changes.

--- a/copier.yml
+++ b/copier.yml
@@ -68,7 +68,7 @@ _exclude:
   # Exclude coverage files when coverage is disabled
   - '{% if not use_coverage %}/codecov.yml{% endif %}'
   # Exclude type-specific files
-  - "{% if type not in ['node', 'rust'] and not (monorepo_node_workspace | default(false)) %}/.gitignore{% endif %}"
+  - "{% if type not in ['node', 'rust'] and not (monorepo_node_workspace | default(false)) and not (subpackages | selectattr('type', 'equalto', 'rust') | list) %}/.gitignore{% endif %}"
   - "{% if type not in ['node', 'rust'] %}/src{% endif %}"
 
 # Template parameters
